--- a/Trustify.Admin/src/app/features/users/user-details/user-details.component.html
+++ b/Trustify.Admin/src/app/features/users/user-details/user-details.component.html
@@ -74,6 +74,6 @@
         </div>
     </div>
     <div mat-dialog-actions class="trf-dialog_actions">
-        <button color="primary" mat-raised-button type="submit" class="trf-confirm-button ">Close</button>
+        <button color="primary" mat-raised-button (click)="close()" class="trf-confirm-button ">Close</button>
     </div>
 </div>
