--- a/Trustify.Frontend/src/app/layout/nav-menu/nav-menu/nav-menu.component.html
+++ b/Trustify.Frontend/src/app/layout/nav-menu/nav-menu/nav-menu.component.html
@@ -14,7 +14,7 @@
         </li>
         <li routerLink="image-generator">
             <mat-icon>draw_collage</mat-icon>
-            <span>Image generator</span>
+            <span>Image finder</span>
         </li>
     </ul>
 </div>
