--- a/Trustify.Frontend/src/app/main/features/textual-content/textual-content-details/textual-content-details.component.html
+++ b/Trustify.Frontend/src/app/main/features/textual-content/textual-content-details/textual-content-details.component.html
@@ -20,7 +20,7 @@
                     <mat-form-field style="margin-right: 10px;">
                         <mat-label for="createdOn">Created on
                         </mat-label>
-                        <input matInput id="createdOn" type="text" [value]="textualContent.createdOn" autocomplete="off"
+                        <input matInput id="createdOn" type="text"  [value]="formattedDate" autocomplete="off"
                             disabled>
                     </mat-form-field>
                     <mat-form-field>
