Select user roles automatically

--- a/Trustify.Frontend/src/app/main/features/europeana/image-generator/image-generator.component.html
+++ b/Trustify.Frontend/src/app/main/features/europeana/image-generator/image-generator.component.html
@@ -9,7 +9,7 @@
             </mat-error>
         </mat-form-field>
         <button mat-raised-button type="submit" color="primary" (click)="generate()" [disabled]="isDisabled"
-            style="width: 100px;">Generate</button>
+            style="width: 100px;">Find</button>
         <p>
             This service uses Europeana service and based on entered word, searches for images that are somehow related
             to the
